crates/gitr/src/parse/snapshots/gitr__parse__tests__snapshot_parse_worktrees_normal.snap
---
source: crates/gitr/src/parse/mod.rs
expression: w
---
[
    GitWorktree {
        path: "/tmp/wt1",
        branch: "main",
    },
    GitWorktree {
        path: "/tmp/wt2",
        branch: "feature/x",
    },
]
